--- a/android/.gitignore
+++ b/android/.gitignore
@@ -13,3 +13,5 @@
 .externalNativeBuild
 .cxx
 local.properties
+/android/app/src/main/jniLibs/arm64-v8a/libuniffi_manga.so
+/android/app/src/main/jniLibs/x86_64/libuniffi_manga.so
